--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -7,10 +7,20 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsc -b ."
+    "build": "scripty",
+    "test": "scripty",
+    "lint": "scripty",
+    "clean": "rimraf dist *.tsbuildinfo"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/jest": "^26.0.20",
+    "jest": "^26.6.3",
+    "lerna": "^3.22.1",
     "typescript": "^4.0.3"
+  },
+  "scripty": {
+    "path": "../../scripts/packages"
   }
 }
