--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,13 +6,25 @@
   "publishConfig": {
     "access": "public"
   },
+  "scripts": {
+    "build": "scripty",
+    "test": "scripty",
+    "lint": "scripty",
+    "clean": "rimraf dist *.tsbuildinfo"
+  },
   "dependencies": {
     "date-fns": "^2.16.1",
     "react": "^17.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^26.0.20",
-    "@types/react": "^17.0.0"
+    "@types/react": "^17.0.0",
+    "jest": "^26.6.3"
+  },
+  "scripty": {
+    "path": "../../scripts/packages"
   }
 }
