--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "node": "14.15.4",
     "yarn": "1.22.10"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "scripty": {
     "path": "./scripts/workspace"
   }
